ddd-derive-tests/tests/entity/named_struct_entity_with_generics.rs
use ddd_derive::Entity;

#[derive(Entity)]
struct Person<T> {
    raw: T,
    name: String,
}

fn main() {}